# smol-minion

./: smol-minion.cabal  stack.yaml
smol-minion/: EmissionIO.hs  EmissionPermutation.hs  Emissions.hs  GeneralizedSNP.hs  Main.hs  MinION.hs  MinIONRepeat.hs  Plot.hs  SNP.hs  SmallRepeat.hs  SubsampleFile.hs  Tester.hs  Utils.hs  eventsHistPts.txt
smol-minion/pomegratate/: build_hmm.py  deamer_test.stb  pomegranate_emissions  post.csv  posterior.tsv  shell  test.csv  test.st  test.tsv  vit.csv
